--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <p>The purpose of our company is to fund independent games. We've been in operation for 12 years.</p>
     </div>
 
+    <!-- Navbar -->
+    <br>
+    <div class="navbar">
+        <a href="#our-games">Our Games</a>
+    </div>
+
     <!-- top games & other interesting stats -->
     <h2>Stats</h2>
     <div class="stats-container">
@@ -41,15 +47,21 @@
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
             <h3>🥇 Top Funded Game</h3>
+            <p id = "first-game-name"></p>
         </div>
         <div class="stats-card" id="second-game">
             <h3>🥈 Runner Up</h3>
+            <p id = "second-game-name"></p>
         </div>
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
+    <h2 id="our-games">Our Games</h2>
     <p>Check out each of our games below!</p>
+
+    <input type="text" id="search-input" style="height:30px;" placeholder="Search for a game..." />
+    <button id="search-btn">Search</button>
+
     <div id="button-container">
         <button id="unfunded-btn">Show Unfunded Only</button>
         <button id="funded-btn">Show Funded Only</button>
